# ic_common

./: .coverage  .gitignore  GEMINI.md  GLOBAL_STANDARDS.md  README.md  pyproject.toml
src/common/: LLMProvider.py  MODULE_CONTEXT.md  config.py  docker_utils.py  document_utils.py  download_utils.py  file_utils.py  job_queue.py  llm_utils.py  logger.py  ml_utils.py  models.py  pydantic_helper.py  pyproject.toml  unified_llm.py  utils.py
src/common/tests/: test_pydantic_helper.py
src/common/tests/manual/: integration_llm.py  test_reasoning.py
tests/: test_config.py  test_job_queue.py  test_new_coverage.py  test_pydantic_helper.py  test_unified_llm.py  test_utils.py
tests/manual/: test_reasoning.py
